doc(getting-started): Fix anchor links  (algolia/react-instantsearch#1877)
* doc(getting-started): fix h2 overflowing text

* Use pointer-events to let the links be clickable

* Anchor remains clickable

--- a/docgen/src/stylesheets/components/_documentation.scss
+++ b/docgen/src/stylesheets/components/_documentation.scss
@@ -179,6 +179,15 @@
         position: relative;
         z-index: 0;
       }
+      &:after {
+        content: "";
+        position: absolute;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        top: $offset-height;
+        pointer-events: all;
+      }
     }
 
     // API tables
@@ -337,6 +346,9 @@
   h2, h3, .api-entry {
     .anchor {
       text-decoration: none;
+      position: absolute;
+      z-index: 2;
+      pointer-events: all;
     }
     .anchor:after{
       content: '#';
